--- a/package.json
+++ b/package.json
@@ -4,24 +4,43 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "ngrok": "ngrok http --domain=improved-kind-anemone.ngrok-free.app 192.168.0.83:3000",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:push": "prisma db push",
+    "postinstall": "prisma generate",
+    "db:studio": "prisma studio"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.28.1",
+    "@clerk/themes": "^1.7.9",
+    "@prisma/client": "^5.7.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "lucide-react": "^0.297.0",
+    "next": "14.0.4",
+    "next-themes": "^0.2.1",
+    "query-string": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "svix": "^1.15.0",
+    "tailwind-merge": "^2.1.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "eslint-config-next": "14.0.4",
+    "postcss": "^8",
+    "prettier": "^3.1.1",
+    "prettier-plugin-tailwindcss": "^0.5.9",
+    "prisma": "^5.7.0",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
