--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "twitch-clone",
+  "name": "gamehub",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "ngrok": "ngrok http --domain=improved-kind-anemone.ngrok-free.app 192.168.0.83:3000",
+    "ngrok": "ngrok http --domain=improved-kind-anemone.ngrok-free.app 3000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -15,13 +15,22 @@
   "dependencies": {
     "@clerk/nextjs": "^4.28.1",
     "@clerk/themes": "^1.7.9",
+    "@livekit/components-react": "^1.5.1",
     "@prisma/client": "^5.7.0",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@types/uuid": "^9.0.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
+    "jwt-decode": "^4.0.0",
+    "livekit-client": "^1.15.4",
+    "livekit-server-sdk": "^1.2.7",
     "lucide-react": "^0.297.0",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
@@ -29,10 +38,12 @@
     "react": "^18",
     "react-dom": "^18",
     "sonner": "^1.2.4",
+    "string-to-color": "^2.2.2",
     "svix": "^1.15.0",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^2.9.1",
+    "uuid": "^9.0.1",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
@@ -43,7 +54,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
-    "prettier": "^3.1.1",
+    "prettier": "3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.9",
     "prisma": "^5.7.0",
     "tailwindcss": "^3.3.0",
