--- a/package.json
+++ b/package.json
@@ -16,16 +16,19 @@
     "@clerk/nextjs": "^4.28.1",
     "@clerk/themes": "^1.7.9",
     "@livekit/components-react": "^1.5.1",
-    "@prisma/client": "^5.7.0",
+    "@prisma/client": "^5.7.1",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@types/uuid": "^9.0.7",
+    "@uploadthing/react": "^6.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
@@ -43,6 +46,7 @@
     "svix": "^1.15.0",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^6.1.0",
     "usehooks-ts": "^2.9.1",
     "uuid": "^9.0.1",
     "zustand": "^4.4.7"
@@ -57,7 +61,7 @@
     "postcss": "^8",
     "prettier": "3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.9",
-    "prisma": "^5.7.0",
+    "prisma": "^5.7.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
